gitops/clusters/homelab/apps/private/private-home-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: private-home-page
  namespace: private
spec:
  selector:
    app: private-home-page
  ports:
    - port: 80
      targetPort: 80
