gitops/clusters/homelab/apps/private/private-home-page/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: private-home-page
  namespace: private
spec:
  entryPoints:
    - private-web-secure
  routes:
    - match: Host(`home.internal.pavel-usanli.online`)
      kind: Rule
      services:
        - name: private-home-page
          port: 80
  tls:
    certResolver: cloudflare
